<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_vision_interfaces</name>
  <version>1.0.0</version>
  <description>ROS2双目视觉系统接口定义 - 服务和消息接口</description>
  <maintainer email="team@stereo-vision.com">Stereo Vision Team</maintainer>
  <license>MIT</license>

  <!-- 依赖的标准消息类型 -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 构建工具依赖 -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
